--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,4 +10,9 @@ jobs:
       - image: cimg/node:16.11.1
     steps:
       - checkout
-      - run: node --version
+      - run:
+        name: Install Dependencies
+        command: npm install
+      - run: 
+        name: Run Tests
+        command: npm run test
